frontend/public/extend/devconsole/shared/yamls/applications/wit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wit-service
  labels:
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: user-wit
    app.kubernetes.io/version: "1.0"
spec:
  selector:
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: user-wit
    app.kubernetes.io/version: "1.0"
  ports:
    - port: 80
